test_regress/t/t_enum_overlap_bad.out
%Error: t/t_enum_overlap_bad.v:11: Overlapping enumeration value: e1b
%Error: t/t_enum_overlap_bad.v:9: ... Location of original declaration
%Error: Exiting due to
